Downgrade service-catalog to v0.2

--- a/k8s/preview/service-catalog/service-catalog.yaml
+++ b/k8s/preview/service-catalog/service-catalog.yaml
@@ -9,9 +9,9 @@ metadata:
 spec:
   releaseName: svc-cat
   chart:
-    repository: https://svc-catalog-charts.storage.googleapis.com/
-    name: catalog
-    version: 0.3.0-beta.2
+    git: https://github.com/hmcts/service-catalog
+    ref: k8s-116-updates
+    path: charts/catalog-v0.2
   values:
     apiserver:
       resources:
