fix botkube config

--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -18,12 +18,12 @@ spec:
   values:
     image:
       tag: v0.9.1
-    communications:
-      # Settings for Slack
-      slack:
-        enabled: true
-        token: 'SLACK_API_TOKEN'
-        notiftype: short
+    config:
+      communications:
+        # Settings for Slack
+        slack:
+          enabled: true
+          notiftype: short
     resources:
       requests:
         cpu: 100m
