--- a/k8s/monitoring/botkube/patches/aat/cluster-00/botkube.yaml
+++ b/k8s/monitoring/botkube/patches/aat/cluster-00/botkube.yaml
@@ -6,8 +6,9 @@ metadata:
   namespace: monitoring
 spec:
   values:
-    settings:
-      clustername: aat-00-aks
-    communications:
-      slack:
-        channel: 'aks-monitor-aat'
+    config:
+      settings:
+        clustername: aat-00-aks
+      communications:
+        slack:
+          channel: 'aks-monitor-aat'
