--- a/k8s/demo/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/demo/common/bsp/bulk-scan-processor.yaml
@@ -26,7 +26,7 @@ spec:
       environment:
         STORAGE_BLOB_SELECTED_CONTAINER: ALL
         #60 days in seconds
-        SAS_TOKEN_VALIDITY: 5184000
+        SAS_TOKEN_VALIDITY: "5184000"
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
