--- a/k8s/demo/common/em/em-npa.yaml
+++ b/k8s/demo/common/em/em-npa.yaml
@@ -22,6 +22,8 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/em/npa:prod-4fbad469
       ingressHost: em-npa-demo.service.core-compute-demo.internal
+      environment:
+        VAR_TA: trigger1
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
