--- a/k8s/demo/common/ethos/repl-docmosis-service.yaml
+++ b/k8s/demo/common/ethos/repl-docmosis-service.yaml
@@ -5,7 +5,8 @@ metadata:
   name: repl-docmosis-service
   namespace: ethos
   annotations:
-    flux.weave.works/automated: "false"
+    flux.weave.works/automated: "true"
+    flux.weave.works/tag.java: glob:pr-709-*
 spec:
   releaseName: repl-docmosis-service
   forceUpgrade: true
