--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -142,6 +142,9 @@ spec:
         slack:
           enabled: true
           notiftype: short
+      settings:
+        allowkubectl: true
+        restrictAccess: true
     resources:
       requests:
         cpu: 100m
