Adding botkube to prod

--- a/k8s/prod/cluster-01-overlay/kustomization.yaml
+++ b/k8s/prod/cluster-01-overlay/kustomization.yaml
@@ -40,3 +40,6 @@ patchesStrategicMerge:
   - ../../monitoring/patches/prod/cluster-01/prom-operator.yaml
 
   - ../../admin/env-injector/patches/prod/cluster-01/env-injector.yaml
+
+  #botkube patch
+  - ../../monitoring/botkube/patches/prod/cluster-01/botkube.yaml
