--- a/k8s/prod/cluster-00-overlay/kustomization.yaml
+++ b/k8s/prod/cluster-00-overlay/kustomization.yaml
@@ -40,3 +40,6 @@ patchesStrategicMerge:
   - ../../monitoring/patches/prod/cluster-00/prom-operator.yaml
 
   - ../../admin/env-injector/patches/prod/cluster-00/env-injector.yaml
+
+  #botkube patch
+  - ../../monitoring/botkube/patches/prod/cluster-00/botkube.yaml
