--- a/k8s/prod/cluster-01-overlay/kustomization.yaml
+++ b/k8s/prod/cluster-01-overlay/kustomization.yaml
@@ -11,6 +11,7 @@ bases:
   - ../../admin/flux-web
   - ../../monitoring
   - ../../admin/env-injector
+  - ../../monitoring/botkube
 
 patchesStrategicMerge:
   #flux patches
