--- a/k8s/preview/osba/osba.yaml
+++ b/k8s/preview/osba/osba.yaml
@@ -21,6 +21,16 @@ spec:
       tag: v1.8.4
     tls:
       enabled: false
+    livenessDelay: 30
+    livenessTimeout: 3
+    livenessPeriod: 15
+    livenessFailureThreshold: 3
+    livenessSuccessThreshold: 1
+    readinessDelay: 30
+    readinessTimeout: 3
+    readinessPeriod: 15
+    readinessFailureThreshold: 3
+    readinessSuccessThreshold: 1
     redis:
       cluster:
         enabled: true
