Disable readiness check osba preview

--- a/k8s/preview/osba/osba.yaml
+++ b/k8s/preview/osba/osba.yaml
@@ -26,6 +26,7 @@ spec:
     livenessPeriod: 15
     livenessFailureThreshold: 3
     livenessSuccessThreshold: 1
+    readinessCheckEnabled: false
     readinessDelay: 30
     readinessTimeout: 3
     readinessPeriod: 15
