Disable liveness check osba preview

--- a/k8s/preview/osba/osba.yaml
+++ b/k8s/preview/osba/osba.yaml
@@ -21,6 +21,7 @@ spec:
       tag: v1.6.0
     tls:
       enabled: false
+    livenessCheckEnabled: false
     livenessDelay: 30
     livenessTimeout: 3
     livenessPeriod: 15
