Increase log level osba preview

--- a/k8s/preview/osba/osba.yaml
+++ b/k8s/preview/osba/osba.yaml
@@ -21,7 +21,8 @@ spec:
       tag: v1.6.0
     tls:
       enabled: false
-    livenessCheckEnabled: false
+    logLevel: DEBUG
+    livenessCheckEnabled: true
     livenessDelay: 30
     livenessTimeout: 3
     livenessPeriod: 15
