enabling kubectl for aat

--- a/k8s/monitoring/botkube/patches/aat/cluster-00/botkube.yaml
+++ b/k8s/monitoring/botkube/patches/aat/cluster-00/botkube.yaml
@@ -9,6 +9,10 @@ spec:
     config:
       settings:
         clustername: aat-00-aks
+        # Set true to enable kubectl commands execution
+        allowkubectl: true
+        # Set true to enable commands execution from configured channel only
+        restrictAccess: true
       communications:
         slack:
           channel: 'aks-monitor-aat'
