--- a/k8s/monitoring/botkube/patches/aat/cluster-01/botkube.yaml
+++ b/k8s/monitoring/botkube/patches/aat/cluster-01/botkube.yaml
@@ -9,6 +9,8 @@ spec:
     config:
       settings:
         clustername: aat-01-aks
+        allowkubectl: true
+        restrictAccess: true
       communications:
         slack:
           channel: 'aks-monitor-aat'
