--- a/k8s/monitoring/botkube/patches/aat/cluster-01/botkube.yaml
+++ b/k8s/monitoring/botkube/patches/aat/cluster-01/botkube.yaml
@@ -9,7 +9,9 @@ spec:
     config:
       settings:
         clustername: aat-01-aks
+        # Set true to enable kubectl commands execution
         allowkubectl: true
+        # Set true to enable commands execution from configured channel only
         restrictAccess: true
       communications:
         slack:
