--- a/k8s/prod/common/em/em-anno.yaml
+++ b/k8s/prod/common/em/em-anno.yaml
@@ -25,7 +25,7 @@ spec:
       environment:
         IDAM_API_BASE_URI: "https://idam-api.platform.hmcts.net"
         OPEN_ID_API_BASE_URI: "https://hmcts-access.service.gov.uk/o"
-        TRIGGER: "item1"
+        TRIGGER2: "item2"
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
