--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -10,9 +10,9 @@ spec:
   releaseName: botkube
   forceUpgrade: true
   chart:
-    repository: https://infracloudio.github.io/charts
-    name: botkube
-    version: v0.9.1
+    git: https://github.com/infracloudio/botkube
+    ref: develop
+    path: helm/botkube
   valueFileSecrets:
   - name: "botkube-values"
   values:
@@ -85,35 +85,6 @@ spec:
             - create
             - delete
             - error
-        - name: persistentvolume
-          namespaces:
-            include:
-              - all
-            ignore:
-              -
-          events:
-            - create
-            - delete
-            - error
-        - name: persistentvolumeclaim
-          namespaces:
-            include:
-              - all
-            ignore:
-              -
-          events:
-            - create
-            - delete
-            - error
-        - name: configmap
-          namespaces:
-            include:
-              - all
-            ignore:
-              -
-          events:
-            - delete
-            - error
         - name: daemonset
           namespaces:
             include:
@@ -142,6 +113,11 @@ spec:
         slack:
           enabled: true
           notiftype: short
+    rbac:
+      rules:
+        - apiGroups: [""]
+          resources: ["events,namespaces,nodes,pods,services,daemonsets,deployments,ingresses,replicasets,jobs"]
+          verbs: ["get", "watch", "list"]
     resources:
       requests:
         cpu: 100m
