--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -116,7 +116,7 @@ spec:
     rbac:
       rules:
         - apiGroups: [""]
-          resources: ["events,namespaces,nodes,pods,services,daemonsets,deployments,ingresses,replicasets,jobs"]
+          resources: ["events,namespaces,nodes,pods,services,daemonsets,deployments,ingresses,replicasets,jobs,configmaps"]
           verbs: ["get", "watch", "list"]
     resources:
       requests:
