using latest tag for botkube

--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -17,7 +17,7 @@ spec:
   - name: "botkube-values"
   values:
     image:
-      tag: v0.9.1
+      tag: latest
     config:
       resources:
         - name: pod                # Name of the resources e.g pod, deployment, ingress, etc. (Resource name must be in singular form)
