Add rse team dashboard

--- a/k8s/admin/jenkins/patches/cftptl/cluster-00/jenkins.yaml
+++ b/k8s/admin/jenkins/patches/cftptl/cluster-00/jenkins.yaml
@@ -212,6 +212,12 @@ spec:
                     name: PCQ
                     recurse: true
                     title: PCQ
+                - buildMonitor:
+                    includeRegex: >-
+                      ^HMCTS_.*RSE.*\/.+\/master
+                    name: RSE
+                    recurse: true
+                    title: RSE
           authentication: |
             jenkins:
               securityRealm:
