update config for dg-assembly

--- a/k8s/demo/common/money-claims/cmc-dg-docassembly.yaml
+++ b/k8s/demo/common/money-claims/cmc-dg-docassembly.yaml
@@ -26,9 +26,10 @@ spec:
           secretRef: docmosis-secret
           key: templatesAuth
       environment:
-        IDAM_API_BASE_URI: https://idam-api.demo.platform.hmcts.net
+        OPEN_ID_API_BASE_URI: https://idam-web-public.demo.platform.hmcts.net/o
         S2S_BASE_URI: http://cmc-s2s-java
         IDAM_WEBSHOW_WHITELIST: https://em-show-demo.service.core-compute-demo.internal/oauth2/callback
+        OIDC_ISSUER_BASE_URI: https://forgerock-am.service.core-compute-idam-demo.internal:8443/openam/oauth2/hmcts
         DM_STORE_APP_URL: "http://cmc-ccd-dm-store"
         S2S_KEY: AAAAAAAAAAAAAAAA
 
