Try adding rbac rules

--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -112,6 +112,11 @@ spec:
       slack:
         enabled: true
         notiftype: short
+    rbac:
+      rules:
+        - apiGroups: ["*"]
+          resources: ["events","namespaces","nodes","pods","services","daemonsets","deployments","ingresses","replicasets","jobs","configmaps"]
+          verbs: ["get", "watch", "list"]
     resources:
       requests:
         cpu: 100m
