IAC - Adding Home Office API config.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -75,6 +75,7 @@ k8s/**/common/ia/case-api.yaml @hmcts/immigration-asylum
 k8s/**/common/ia/case-documents-api.yaml @hmcts/immigration-asylum
 k8s/**/common/ia/case-notifications-api.yaml @hmcts/immigration-asylum
 k8s/aat/common/ia/aip-frontend.yaml @hmcts/immigration-asylum
+k8s/aat/common/ia/home-office-integration-api.yaml @hmcts/immigration-asylum
 
 ## Divorce
 k8s/demo/common/divorce/*.yaml @hmcts/divorce
