--- a/k8s/admin/jenkins/jenkins.yaml
+++ b/k8s/admin/jenkins/jenkins.yaml
@@ -19,7 +19,7 @@ spec:
       # Used for label app.kubernetes.io/component 
       componentName: "jenkins-master"
       image: "hmctspublic.azurecr.io/jenkins"
-      imageTag: "db3mgy"
+      imageTag: "db3qfy"
       imagePullPolicy: "IfNotPresent"
       podLabels:
         aadpodidbinding: jenkins
