--- a/k8s/aat/common/money-claims/cmc-citizen-frontend.yaml
+++ b/k8s/aat/common/money-claims/cmc-citizen-frontend.yaml
@@ -26,6 +26,7 @@ spec:
         FEATURE_TESTING_SUPPORT: true
         FEATURE_RETURN_ERROR_TO_USER: true
         FEATURE_WEB_CHAT: true
+        FEATURE_MOCK_PAY: true
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
