--- a/k8s/neuvector/neuvector.yaml
+++ b/k8s/neuvector/neuvector.yaml
@@ -65,7 +65,14 @@ spec:
       - '{"config":{"name":"Mta","criteria":[{"key": "address", "value": "mta.reform.hmcts.net", "op": "="}]}}'
       - '{"config":{"name":"Idam","criteria":[{"key": "address", "value": "idam-api.platform.hmcts.net", "op": "="}]}}'
     neuvector:
-      tag: 3.1.3
+      tag: 3.2.0
+      resources:
+        requests:
+          cpu: "100m"
+          memory: "2Gi"
+        limits:
+          cpu: 1
+          memory: 5Gi
       controller:
         image:
           repository:
