bar-web to prod

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -178,7 +178,7 @@ k8s/**/common/ccpay/ccpay-bubble-frontend.yaml @hmcts/Fees
 
 ## bar
 k8s/**/common/bar/bar-app.yaml @hmcts/Fees
-k8s/aat/common/bar/bar-web.yaml @hmcts/Fees
+k8s/**/common/bar/bar-web.yaml @hmcts/Fees
 k8s/**/common/bar/identity.yaml @hmcts/Fees
 k8s/**/common/bar/namespace.yaml @hmcts/Fees
 
