Add rse jenkins app config

--- a/k8s/admin/jenkins/jenkins.yaml
+++ b/k8s/admin/jenkins/jenkins.yaml
@@ -488,6 +488,11 @@ spec:
                           description: "GitHub APP Key - sscs"
                           id: "hmcts-jenkins-sscs"
                           privateKey: "${hmcts-jenkins-sscs-ghapp}"
+                      - gitHubApp:
+                          appID: "60878"
+                          description: "GitHub APP Key - rse"
+                          id: "hmcts-jenkins-rse"
+                          privateKey: "${hmcts-jenkins-rse-ghapp}"                          
           jobs: |
             jobs:
               - url: https://raw.githubusercontent.com/hmcts/cnp-jenkins-config/master/jobdsl/organisations-beta.groovy
