Set ingressHost for pay bubble

--- a/k8s/prod/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/prod/common/ccpay/ccpay-bubble-frontend.yaml
@@ -21,6 +21,7 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:prod-085759cc
+      ingressHost: paybubble.platform.hmcts.net
       environment:
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         IDAM_AUTHENTICATION_WEB_URL: https://hmcts-access.service.gov.uk
