try adding kustomize tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,3 +16,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Tests
       run: ./tests/run.sh --verbose
+    - name: Kustomize Tests
+      run: ./tests/test-kustomize.sh --verbose
