--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -25,7 +25,7 @@ spec:
             include:
               - all
             ignore:                 # List of namespaces to be ignored (omitempty), used only with include: all
-              - # example : include [all], ignore [x,y,z] 
+              - []# example : include [all], ignore [x,y,z] 
           events:                   # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
             - error
         - name: service
@@ -33,7 +33,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - error
         - name: deployment
@@ -41,7 +41,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - update
             - delete
@@ -55,7 +55,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - create
             - update
@@ -71,7 +71,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - error
         - name: node
@@ -79,7 +79,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - create
             - delete
@@ -89,7 +89,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - update
             - delete
@@ -104,7 +104,7 @@ spec:
             include:
               - all
             ignore:
-              -
+              - []
           events:
             - error
     communications:
