--- a/k8s/monitoring/botkube/botkube.yaml
+++ b/k8s/monitoring/botkube/botkube.yaml
@@ -24,24 +24,21 @@ spec:
           namespaces:
             include:
               - all
-            ignore:                 # List of namespaces to be ignored (omitempty), used only with include: all
-              - []# example : include [all], ignore [x,y,z] 
+            ignore: []               # List of namespaces to be ignored (omitempty), used only with include: all # example : include [all], ignore [x,y,z] 
           events:                   # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
             - error
         - name: service
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - error
         - name: deployment
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - update
             - delete
@@ -54,8 +51,7 @@ spec:
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - create
             - update
@@ -70,16 +66,14 @@ spec:
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - error
         - name: node
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - create
             - delete
@@ -88,8 +82,7 @@ spec:
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - update
             - delete
@@ -103,8 +96,7 @@ spec:
           namespaces:
             include:
               - all
-            ignore:
-              - []
+            ignore: []
           events:
             - error
     communications:
