remove replicas alerts

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Tests
       run: ./tests/run.sh --verbose
     - name: Kustomize Tests
-      run: ./tests/test-kustomize.sh --verbose
+      run: ./tests/test-kustomize.sh
