--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Tests
-      run: ./tests/run.sh --verbose
+      run: ./tests/run.sh
     - name: Kustomize Tests
       run: ./tests/test-kustomize.sh
