added jrd data load and api yaml files under prod

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -59,7 +59,7 @@ k8s/**/common/ccd/case-print-service.yaml @hmcts/cdm
 k8s/**/common/ccd/admin-web.yaml @hmcts/cdm
 k8s/aat/common/ccd/test-stubs-service.yaml @hmcts/cdm
 k8s/**/common/ccd/case-activity-api.yaml @hmcts/cdm
-k8s/**/common/ccd/case-management-web.yaml @hmcts/cdm 
+k8s/**/common/ccd/case-management-web.yaml @hmcts/cdm
 
 ##CMC
 k8s/**/common/money-claims/namespace.yaml @hmcts/cmc
@@ -135,8 +135,8 @@ k8s/**/common/rd/identity.yaml @hmcts/ref-data
 k8s/**/common/rd/professional-api.yaml @hmcts/ref-data
 k8s/**/common/rd/profile-sync.yaml @hmcts/ref-data
 k8s/**/common/rd/user-profile-api.yaml @hmcts/ref-data
-k8s/aat/common/rd/judicial-api.yaml @hmcts/ref-data
-k8s/aat/common/rd/judicial-data-load.yaml @hmcts/ref-data
+k8s/**/common/rd/judicial-api.yaml @hmcts/ref-data
+k8s/**/common/rd/judicial-data-load.yaml @hmcts/ref-data
 
 ## SSCS
 k8s/**/common/sscs/namespace.yaml @hmcts/sscs
