--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -173,7 +173,7 @@ k8s/**/common/ccpay/namespace.yaml @hmcts/Fees
 k8s/**/common/ccpay/identity.yaml @hmcts/Fees
 k8s/**/common/ccpay/ccpay-bulkscanning-app.yaml @hmcts/Fees
 k8s/**/common/ccpay/ccpay-payment-app.yaml @hmcts/Fees
-k8s/aat/common/ccpay/fees-register-api.yaml @hmcts/Fees
+k8s/**/common/ccpay/fees-register-api.yaml @hmcts/Fees
 k8s/**/common/ccpay/fees-register-frontend.yaml @hmcts/Fees
 k8s/**/common/ccpay/ccpay-bubble-frontend.yaml @hmcts/Fees
 
