--- a/k8s/prod/common/ccpay/fees-register-api.yaml
+++ b/k8s/prod/common/ccpay/fees-register-api.yaml
@@ -21,7 +21,9 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/fees-register/api:prod-a3e1053a
+      environmnet:
+        IDAM_CLIENT_BASE_URL: https://idam-api.platform.hmcts.net
     global:
-      environment: aat
+      environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
