--- a/k8s/prod/common/rd/judicial-api.yaml
+++ b/k8s/prod/common/rd/judicial-api.yaml
@@ -2,26 +2,26 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: rd-judicial-data-load
+  name: rd-judicial-api
   namespace: rd
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.java: glob:prod-*
 spec:
-  releaseName: rd-judicial-data-load
+  releaseName: rd-judicial-api
   rollback:
     enable: true
     retry: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: rd-judicial-data-load
-    version: 0.1.2
+    name: rd-judicial-api
+    version: 0.0.5
   values:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-8ab02180
+      image: hmctspublic.azurecr.io/rd/judicial-api:prod-788c2ff5
     global:
-      environment: aat
+      environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
