--- a/k8s/prod/common/rd/judicial-data-load.yaml
+++ b/k8s/prod/common/rd/judicial-data-load.yaml
@@ -20,8 +20,8 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-8ab02180
+      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-1a91015f
     global:
-      environment: aat
+      environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
