Updated payment-app chart (#2881)
* Updated payment-app chart

* Update chart value

Co-authored-by: Bogdan Stanciu <bogdan.stanciu@hmcts.net>

--- a/k8s/aat/common/ccpay/ccpay-payment-app.yaml
+++ b/k8s/aat/common/ccpay/ccpay-payment-app.yaml
@@ -15,12 +15,12 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: payment-api
-    version: 2.0.6
+    version: 2.0.11
   values:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/payment/api:prod-6e6ee787
+      image: hmctspublic.azurecr.io/payment/api:prod-latest
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
