--- a/k8s/aat/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/aat/common/ccpay/ccpay-bubble-frontend.yaml
@@ -21,6 +21,7 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:prod-085759cc
+      ingressHost: paybubble.aat.platform.hmcts.net
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
