--- a/k8s/ithc/common/ccpay/fees-register-api.yaml
+++ b/k8s/ithc/common/ccpay/fees-register-api.yaml
@@ -22,6 +22,6 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/fees-register/api:prod-56339216
     global:
-      environment: aat
+      environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
