--- a/k8s/prod/common/ccpay/fees-register-api.yaml
+++ b/k8s/prod/common/ccpay/fees-register-api.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/fees-register/api:prod-56339216
+      environment:
+        IDAM_CLIENT_BASE_URL: https://idam-api.platform.hmcts.net
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
