--- a/k8s/prod/common/reform-scan/notification-service.yaml
+++ b/k8s/prod/common/reform-scan/notification-service.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/reform-scan/notification-service:prod-798d8acf
+      environment:
+        PENDING_NOTIFICATIONS_TASK_DELAY_IN_MS: "1800000"
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
