--- a/k8s/prod/common/idam/idam-web-admin.yaml
+++ b/k8s/prod/common/idam/idam-web-admin.yaml
@@ -19,10 +19,10 @@ spec:
   values:
     java:
       image: hmctspublic.azurecr.io/idam/web-admin:latest
-      ingressHost: idam-web-admin.platform.hmcts.net
+      ingressHost: idam-web-admin-prod2.platform.hmcts.net
       aadIdentityName: idam
       environment:
-        STRATEGIC_SERVICE_URL: https://idam-api.platform.hmcts.net
+        STRATEGIC_SERVICE_URL: https://idam-api-prod2.platform.hmcts.net
         STRATEGIC_PUBLIC_URL: https://hmcts-access.service.gov.uk
     global:
       environment: prod
