--- a/k8s/prod/common/idam/idam-web-public.yaml
+++ b/k8s/prod/common/idam/idam-web-public.yaml
@@ -22,7 +22,7 @@ spec:
       ingressHost: hmcts-access.service.gov.uk
       aadIdentityName: idam
       environment:
-        STRATEGIC_SERVICE_URL: https://idam-api.platform.hmcts.net
+        STRATEGIC_SERVICE_URL: https://idam-api-prod2.platform.hmcts.net
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
