WLA_230: Fix redirect issue in Div FEs

--- a/k8s/demo/common/divorce/div-da.yaml
+++ b/k8s/demo/common/divorce/div-da.yaml
@@ -20,7 +20,8 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/div/da:prod-dcdf3fdd
+      image: hmctspublic.azurecr.io/div/da:pr-104-9a7db303
+      ingressClass: traefik-no-proxy
       ingressHost: decree-absolute-aks.demo.platform.hmcts.net
       environment:
         PUBLIC_HOSTNAME: https://decree-absolute-aks.demo.platform.hmcts.net
