--- a/k8s/demo/common/em/em-stitching.yaml
+++ b/k8s/demo/common/em/em-stitching.yaml
@@ -24,6 +24,7 @@ spec:
       ingressHost: em-stitching-demo.service.core-compute-demo.internal
       environment:
         TASK_ENV: documentTaskLock-aat
+        VAR_TA: trigger1
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
