fix(review comments): update flux annotations

--- a/k8s/prod/common/idam/idam-web-admin.yaml
+++ b/k8s/prod/common/idam/idam-web-admin.yaml
@@ -5,8 +5,8 @@ metadata:
   name: idam-web-admin
   namespace: idam
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/java: glob:prod-*
 spec:
   releaseName: idam-web-admin
   rollback:
