chore(idam): update codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -184,6 +184,9 @@ k8s/**/common/bar/identity.yaml @hmcts/Fees
 k8s/**/common/bar/namespace.yaml @hmcts/Fees
 
 # IDAM
+k8s/prod/common/idam/idam-api.yaml @hmcts/idam
+k8s/prod/common/idam/idam-web-public.yaml @hmcts/idam
+k8s/prod/common/idam/idam-web-admin.yaml @hmcts/idam
 k8s/aat/common/idam/idam-api.yaml @hmcts/idam
 k8s/aat/common/idam/idam-web-public.yaml @hmcts/idam
 k8s/aat/common/idam/idam-web-admin.yaml @hmcts/idam
