Add a dummy var to bulk-scan-processor aat and demo to refresh secrets

--- a/k8s/aat/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-processor.yaml
@@ -26,6 +26,8 @@ spec:
       environment:
         STORAGE_BLOB_SELECTED_CONTAINER: ALL
         ERROR_NOTIFICATIONS_ENABLED: true
+        # temporary var to recreate pod and pick up current values from key vault
+        DUMMY_VAR: remove-it
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
