--- a/k8s/demo/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/demo/common/bsp/bulk-scan-processor.yaml
@@ -27,6 +27,8 @@ spec:
         STORAGE_BLOB_SELECTED_CONTAINER: ALL
         #60 days in seconds
         SAS_TOKEN_VALIDITY: "5184000"
+        # temporary var to recreate pod and pick up current values from key vault
+        DUMMY_VAR: remove-it
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
