--- a/k8s/mgmt-sandbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/mgmt-sandbox/cluster-00-overlay/kustomization.yaml
@@ -6,7 +6,7 @@ bases:
 - ../../namespaces/admin/kube-slack
 - ../../namespaces/admin/keyvault-flexvol
 - ../../namespaces/admin/traefik
-- ../../namespaces/admin/jenkins
+- ../../namespaces/jenkins
 - ../../namespaces/kured
 - ../../namespaces/monitoring
 - ../../namespaces/admin/env-injector
