--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -14,12 +14,8 @@ k8s/prod/ @hmcts/production-apps-approvals
 ## application rules
 
 k8s/common/ @hmcts/platform-engineering @hmcts/devops
-k8s/admin/ @hmcts/platform-engineering @hmcts/devops
-k8s/kured/ @hmcts/platform-engineering @hmcts/devops
-k8s/osba/ @hmcts/platform-engineering @hmcts/devops
-k8s/neuvector/ @hmcts/platform-engineering @hmcts/devops
+k8s/namespaces/ @hmcts/platform-engineering @hmcts/devops
 k8s/**/cluster-*-overlay/ @hmcts/platform-engineering
-k8s/monitoring/ @hmcts/platform-engineering @hmcts/devops
 
 ### Next team
 
