--- a/k8s/demo/cluster-00-overlay/kustomization.yaml
+++ b/k8s/demo/cluster-00-overlay/kustomization.yaml
@@ -7,7 +7,7 @@ bases:
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/traefik
   - ../../namespaces/kured
-  - ../../osba
+  - ../../namespaces/osba
   - ../../namespaces/admin/env-injector
 
 patchesStrategicMerge:
@@ -29,6 +29,6 @@ patchesStrategicMerge:
   - ../../namespaces/kured/patches/demo/cluster-00/kured.yaml
 
   #osba patch
-  - ../../osba/patches/demo/osba.yaml
+  - ../../namespaces/osba/patches/demo/osba.yaml
 
   - ../../namespaces/admin/env-injector/patches/demo/cluster-00/env-injector.yaml
