--- a/k8s/prod/common/reform-scan/blob-router.yaml
+++ b/k8s/prod/common/reform-scan/blob-router.yaml
@@ -14,7 +14,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: reform-scan-blob-router
-    version: 0.0.42
+    version: 0.0.41
   values:
     java:
       replicas: 2
@@ -30,6 +30,8 @@ spec:
         STORAGE_BLOB_PUBLIC_KEY: "trusted_public_key.der"
         CRIME_DESTINATION_CONTAINER: bs-prd-scan-received
         CRIME_ENABLED: true
+        SEND_DAILY_REPORT_ENABLED: true
+        SMTP_HOST: "smtp.office365.com"
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
