--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -180,9 +180,9 @@ k8s/**/common/bar/identity.yaml @hmcts/Fees
 k8s/**/common/bar/namespace.yaml @hmcts/Fees
 
 # IDAM
-k8s/aat/common/idam/idam-api.yaml @hmcts/idam
-k8s/aat/common/idam/idam-web-public.yaml @hmcts/idam
-k8s/aat/common/idam/idam-web-admin.yaml @hmcts/idam
+k8s/**/common/idam/idam-api.yaml @hmcts/idam
+k8s/**/common/idam/idam-web-public.yaml @hmcts/idam
+k8s/**/common/idam/idam-web-admin.yaml @hmcts/idam
 k8s/**/common/idam/namespace.yaml @hmcts/idam
 k8s/**/common/idam/identity.yaml @hmcts/idam
 
