--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -513,6 +513,9 @@ spec:
             requests:
               cpu: 50m
               memory: 50Mi
+          env:
+            - name: REQ_TIMEOUT
+              value: "60"
           # SSH port value can be set to any unused TCP port.  The default, 1044, is a non-standard SSH port that has been chosen at random.
           # Is only used to reload jcasc config from the sidecar container running in the Jenkins master pod.
           # This TCP port will not be open in the pod (unless you specifically configure this), so Jenkins will not be
