--- a/k8s/prod/common/dm-store/dm-store.yaml
+++ b/k8s/prod/common/dm-store/dm-store.yaml
@@ -26,6 +26,7 @@ spec:
       ingressHost: dm-store-prod.service.core-compute-prod.internal
       environment:
         ENABLE_TTL: "false"
+        ENABLE_TESTING: "false"
       testsConfig:
         environment:
           TEST_URL: http://dm-store-java
