--- a/k8s/preview/chart-tests/cmc-identity.yaml
+++ b/k8s/preview/chart-tests/cmc-identity.yaml
@@ -2,7 +2,7 @@ apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentity
 metadata:
  name: money-claims
- namespace: money-claims
+ namespace: chart-tests
 spec:
  type: 0
  ResourceID: /subscriptions/96c274ce-846d-4e48-89a7-d528432298a7/resourceGroups/managed-identities-aat-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/money-claims-aat-mi
@@ -14,7 +14,7 @@ apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentityBinding
 metadata:
   name: money-claims-binding
-  namespace: money-claims
+  namespace: chart-tests
 spec:
   AzureIdentity: money-claims
   Selector: money-claims
