--- a/k8s/perftest/common/idam/idam-api.yaml
+++ b/k8s/perftest/common/idam/idam-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: idam
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:perftest-*
+    flux.weave.works/tag.java: glob:aat-*
 spec:
   releaseName: idam-api
   rollback:
@@ -18,7 +18,7 @@ spec:
     version: 0.2.4
   values:
     java:
-      image: hmctspublic.azurecr.io/idam/api:perftest
+      image: hmctspublic.azurecr.io/idam/api:aat
       imagePullPolicy: Always
       replicas: 2
       ingressHost: idam-api.perftest.platform.hmcts.net
