--- a/k8s/perftest/common/idam/idam-web-admin.yaml
+++ b/k8s/perftest/common/idam/idam-web-admin.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: idam
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:perftest-*
+    flux.weave.works/tag.java: glob:aat-*
 spec:
   releaseName: idam-web-admin
   rollback:
@@ -18,7 +18,7 @@ spec:
     version: 0.2.3
   values:
     java:
-      image: hmctspublic.azurecr.io/idam/web-admin:perftest
+      image: hmctspublic.azurecr.io/idam/web-admin:aat
       imagePullPolicy: Always
       ingressHost: idam-web-admin.perftest.platform.hmcts.net
       aadIdentityName: idam
