Point to AAT ethos
Point to AAT ethos

--- a/k8s/aat/common/ethos/repl-docmosis-service.yaml
+++ b/k8s/aat/common/ethos/repl-docmosis-service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ethos
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:aat-*
 spec:
   releaseName: repl-docmosis-service
   rollback:
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ethos/repl-docmosis-backend:prod-1ccf0d26
+      image: hmctspublic.azurecr.io/ethos/repl-docmosis-backend:aat-51a48311
       ingressHost: ethos-repl-docmosis-backend-aat.service.core-compute-aat.internal
     global:
       environment: aat
