--- a/k8s/ithc/common/ccd/case-print-service.yaml
+++ b/k8s/ithc/common/ccd/case-print-service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:prod-*
+    flux.weave.works/tag.nodejs: glob:pr-220-*
 spec:
   releaseName: ccd-case-print-service
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/case-print-service:prod-c09da756
+      image: hmctspublic.azurecr.io/ccd/case-print-service:pr-220-35f2f4da
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
