--- a/k8s/mgmt-sandbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/mgmt-sandbox/cluster-00-overlay/kustomization.yaml
@@ -10,6 +10,7 @@ bases:
 - ../../namespaces/kured
 - ../../namespaces/monitoring
 - ../../namespaces/admin/env-injector
+- ../../namespaces/pact-broker
 
 patchesStrategicMerge:
 #flux patches
@@ -37,3 +38,7 @@ patchesStrategicMerge:
 - ../../namespaces/monitoring/patches/mgmt-sandbox/cluster-00/prom-operator.yaml
 
 - ../../namespaces/admin/env-injector/patches/mgmt-sandbox/cluster-00/env-injector.yaml
+
+#pact-broker
+- ../../namespaces/pact-broker/patches/mgmt-sandbox/cluster-00/pact-broker.yaml
+- ../../namespaces/pact-broker/patches/mgmt-sandbox/cluster-00/identity.yaml
