jenkins-sandbox config autoreload image

--- a/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
@@ -20,7 +20,7 @@ spec:
           value: https://cftsbox-intsvc.vault.azure.net
       sidecars:
          configAutoReload:
-           image: shadwell/k8s-sidecar:0.0.7
+           image: kiwigrid/k8s-sidecar:0.1.132
            env:
              - name: REQ_TIMEOUT
                value: "60"
