--- a/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
@@ -68,6 +68,8 @@ spec:
                         value: DCD-CFTAPPS-SBOX
                       - key: PROD_AKS_KEY_VAULT
                         value: cftapps-sbox
+                      - key: CRASH_TEST
+                        value: true
           views: |
             jenkins:
               views:
