--- a/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
@@ -68,8 +68,6 @@ spec:
                         value: DCD-CFTAPPS-SBOX
                       - key: PROD_AKS_KEY_VAULT
                         value: cftapps-sbox
-                      - key: CRASH_TEST
-                        value: true
           views: |
             jenkins:
               views:
@@ -77,7 +75,7 @@ spec:
                     name: all
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS_.*(Platform|CNP).*\/(draft-store|rpe-pdf-service|feature-toggle-api|service-auth-provider-app|spring-boot-template|cnp-rhubarb-recipes-service|cnp-plum-recipes-service|cnp-plum-frontend|cnp-plum-shared-infrastructure)\/master
+                      ^HMCTS_.*(Platform|CNP).*\/(test-crash|draft-store|rpe-pdf-service|feature-toggle-api|service-auth-provider-app|spring-boot-template|cnp-rhubarb-recipes-service|cnp-plum-recipes-service|cnp-plum-frontend|cnp-plum-shared-infrastructure)\/master
                     name: Platform
                     recurse: true
                     title: Platform
