Moving artifactory to new mgmt clusters

--- a/k8s/mgmt-sandbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/mgmt-sandbox/cluster-00-overlay/kustomization.yaml
@@ -11,6 +11,7 @@ bases:
 - ../../namespaces/monitoring
 - ../../namespaces/admin/env-injector
 - ../../namespaces/pact-broker
+- ../../namespaces/artifactory
 
 patchesStrategicMerge:
 #flux patches
@@ -42,3 +43,6 @@ patchesStrategicMerge:
 #pact-broker
 - ../../namespaces/pact-broker/patches/mgmt-sandbox/cluster-00/pact-broker.yaml
 - ../../namespaces/pact-broker/patches/mgmt-sandbox/cluster-00/identity.yaml
+
+#artifactory
+- ../../namespaces/artifactory/patches/mgmt-sandbox/cluster-00/ingress.yaml
