--- a/k8s/cftptl/cluster-00-overlay/kustomization.yaml
+++ b/k8s/cftptl/cluster-00-overlay/kustomization.yaml
@@ -11,6 +11,7 @@ bases:
 - ../../namespaces/monitoring
 - ../../namespaces/admin/env-injector
 - ../../namespaces/pact-broker
+- ../../namespaces/artifactory
 
 patchesStrategicMerge:
 #flux patches
