--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -13,7 +13,7 @@ spec:
   chart:
     repository: https://kubernetes-charts.storage.googleapis.com/
     name: jenkins
-    version: 1.9.4
+    version: 1.16.1
   values:
     master:
       # Used for label app.kubernetes.io/component 
@@ -504,7 +504,7 @@ spec:
           # over SSH to reapply config when changes to the configScripts are detected.  The admin user (or account you specify in
           # master.adminUser) will have a random SSH private key (RSA 4096) assigned unless you specify adminSshKey.  This will be saved to a k8s secret.
           enabled: true
-          image: shadwell/k8s-sidecar:0.0.2
+          image: kiwigrid/k8s-sidecar:0.1.132
           imagePullPolicy: IfNotPresent
           resources:
             limits:
