--- a/k8s/demo/common/probate/probate-back-office.yaml
+++ b/k8s/demo/common/probate/probate-back-office.yaml
@@ -6,7 +6,6 @@ metadata:
   namespace: probate
   annotations:
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.java: glob:pr-1063-*
 spec:
   releaseName: probate-back-office
   rollback:
@@ -20,7 +19,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: "hmctspublic.azurecr.io/probate/back-office:pr-1063-be107168"
+      image: "hmctspublic.azurecr.io/probate/back-office:demo"
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
