--- a/k8s/prod/common/bsp/bulk-scan-payment-processor.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-payment-processor.yaml
@@ -22,6 +22,7 @@ spec:
       image: hmctspublic.azurecr.io/bulk-scan/payment-processor:prod-81690d65
       environment:
         IDAM_API_URL: "https://idam-api.platform.hmcts.net"
+        SCHEDULING_TASK_CONSUME-PAYMENTS-QUEUE_ENABLED: false
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
