--- a/k8s/prod/common/bsp/bulk-scan-orchestrator.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-orchestrator.yaml
@@ -26,6 +26,7 @@ spec:
         TRANSFORMATION_URL_FINREM: ""
         DELETE_ENVELOPES_DLQ_MESSAGES_CRON: "0 30 0/2 * * *"
         DELETE_ENVELOPES_DLQ_MESSAGES_TTL: "PT72H"
+        SCHEDULING_TASK_CONSUME-ENVELOPES-QUEUE_ENABLED: false
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
