--- a/k8s/prod/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-processor.yaml
@@ -25,7 +25,7 @@ spec:
       environment:
         STORAGE_BLOB_SELECTED_CONTAINER: ALL
         STORAGE_URL: https://bulkscan.platform.hmcts.net
-        PROCESS_PAYMENTS_ENABLED: true
+        PROCESS_PAYMENTS_ENABLED: false
         SMTP_HOST: smtp.office365.com
         SCAN_DELAY: 300000
         REUPLOAD_DELAY: 600000
@@ -34,6 +34,9 @@ spec:
         NO_NEW_ENVELOPES_TASK_ENABLED: true
         OCR_VALIDATION_URL_DIVORCE: ""
         OCR_VALIDATION_URL_FINREM: ""
+        SCAN_ENABLED: false
+        REUPLOAD_ENABLED: false
+        DELETE_REJECTED_FILES_ENABLED: false
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
