--- a/k8s/ithc/common/xui/approve-org.yaml
+++ b/k8s/ithc/common/xui/approve-org.yaml
@@ -26,6 +26,7 @@ spec:
         IDAM_API_SERVICE: https://idam-api.ithc.platform.hmcts.net
         OAUTH_CALLBACK_URL: oauth2/callback
         FEATURE_SECURE_COOKIE_ENABLED: false
+        DUMMY_VAR: true
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
