--- a/k8s/ithc/common/xui/manage-organisations.yaml
+++ b/k8s/ithc/common/xui/manage-organisations.yaml
@@ -25,6 +25,7 @@ spec:
         IDAM_WEB_SERVICE: https://idam-web-public.ithc.platform.hmcts.net
         IDAM_API_SERVICE: https://idam-api.ithc.platform.hmcts.net
         FEATURE_TERMS_AND_CONDITIONS_ENABLED: true
+        DUMMY_VAR: true
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
