--- a/k8s/demo/common/ccd/api-gateway-web.yaml
+++ b/k8s/demo/common/ccd/api-gateway-web.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:demo
+    flux.weave.works/tag.nodejs: glob:pr-319-*
 spec:
   releaseName: ccd-api-gateway-web
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/api-gateway-web:demo
+      image: hmctspublic.azurecr.io/ccd/api-gateway-web:pr-319-dc33b27a
       ingressClass: traefik-no-proxy
       environment:
         CORS_ORIGIN_WHITELIST: "*"
