--- a/k8s/demo/common/ccd/definition-store-api.yaml
+++ b/k8s/demo/common/ccd/definition-store-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:demo
+    flux.weave.works/tag.java: glob:pr-603-*
 spec:
   releaseName: ccd-definition-store-api
   rollback:
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/definition-store-api:demo
+      image: hmctspublic.azurecr.io/ccd/definition-store-api:pr-603-8b8755b2
       environment:
         IDAM_USER_URL: https://idam-web-public.demo.platform.hmcts.net
     global:
