enable kubectl on prod

--- a/k8s/namespaces/monitoring/botkube/botkube.yaml
+++ b/k8s/namespaces/monitoring/botkube/botkube.yaml
@@ -19,6 +19,11 @@ spec:
     image:
       tag: latest
     config:
+      settings:
+        # Set true to enable kubectl commands execution
+        allowkubectl: true
+        # Set true to enable commands execution from configured channel only
+        restrictAccess: true
       resources:
         - name: pod                # Name of the resources e.g pod, deployment, ingress, etc. (Resource name must be in singular form)
           namespaces:
