Change health metric on folders to primary branch

--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -146,6 +146,11 @@ spec:
                             credentialsId: hmcts-jenkins-cnp
                             repoOwner: hmcts
                             repository: cnp-jenkins-library
+          health: |
+            unclassified:
+              defaultFolderConfiguration:
+                healthMetrics:
+                - "primaryBranchHealthMetric"
           slack: |
             unclassified:
               slackNotifier:
