--- a/k8s/demo/common/dg/identity.yaml
+++ b/k8s/demo/common/dg/identity.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: 0
 ResourceID: /subscriptions/d025fece-ce99-4df2-b7a9-b649d3ff2060/resourceGroups/managed-identities-demo-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/dg-demo-mi
- ClientID: "3c688173-23b0-43aa-a6e5-bb5e982cbd68"
+ ClientID: 3c688173-23b0-43aa-a6e5-bb5e982cbd68
 
 ---
 
