start aat deployment

--- a/k8s/aat/common/bsp/bulk-scan-orchestrator.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-orchestrator.yaml
@@ -5,8 +5,7 @@ metadata:
   name: bulk-scan-orchestrator
   namespace: bsp
   annotations:
-    flux.weave.works/ignore: "true"
-    flux.weave.works/automated: "false"
+    flux.weave.works/automated: "true"
     flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: bulk-scan-orchestrator
